<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.openstreetmap.josm.plugins</groupId>
    <artifactId>MapWithAI</artifactId>
    <version>SNAPSHOT</version>
    <properties>
      <jmockit.version>1.49.a</jmockit.version>
      <pmd.version>7.5.0</pmd.version>
      <jacoco.version>0.8.12</jacoco.version>
      <checkstyle.version>10.18.1</checkstyle.version>
      <spotbugs.version>4.8.6</spotbugs.version>
    </properties>
    <repositories>
        <repository>
            <id>JOSM-releases</id>
            <url>https://josm.openstreetmap.de/nexus/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>JOSM-snapshots</id>
            <url>https://josm.openstreetmap.de/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.11.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.openstreetmap.josm</groupId>
            <artifactId>josm</artifactId>
            <version>SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openstreetmap.josm.plugins</groupId>
            <artifactId>pmtiles</artifactId>
            <version>SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openstreetmap.josm.plugins</groupId>
            <artifactId>utilsplugin2</artifactId>
            <version>SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openstreetmap.josm</groupId>
            <artifactId>josm-unittest</artifactId>
            <version>SNAPSHOT</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wiremock</groupId>
            <artifactId>wiremock</artifactId>
            <version>3.9.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency> <!-- needed until JOSM core removes Junit4 support -->
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>4.2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>nl.jqno.equalsverifier</groupId>
            <artifactId>equalsverifier</artifactId>
            <version>3.17</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <version>1.49.a</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>2.1.3</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <testSourceDirectory>src/test/unit</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <eclipse>
                            <version>4.21</version>
                            <file>${project.basedir}/../00_core_tools/eclipse/formatter.xml</file>
                        </eclipse>
                        <removeUnusedImports/>
                        <licenseHeader>
                            <content>// License: GPL. For details, see LICENSE file.</content>
                        </licenseHeader>
                        <includes>
                          <include>src/main/java/**/*.java</include>
                          <include>src/test/unit/**/*.java</include>
                          <include>src/test/integration/**/*.java</include>
                        </includes>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <rules>
                        <requireMavenVersion>
                            <version>3.6.3</version>
                        </requireMavenVersion>
                    </rules>
                </configuration>
            </plugin>
        <!-- Configure the test plugin, specifically enable autodetection of global extensions -->
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <skipAfterFailureCount>1</skipAfterFailureCount>
            <argLine>-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</argLine>
            <properties>
              <configurationParameters>
                file.encoding = UTF-8
                java.locale.providers = SPI,CLDR
                junit.jupiter.extensions.autodetection.enabled = true
                junit.jupiter.execution.parallel.enabled = true
              </configurationParameters>
            </properties>
            <systemPropertyVariables>
              <josm.home>src/test/build/config/josm.home</josm.home>
              <josm.test.data>src/test/resources</josm.test.data>
              <java.awt.headless>true</java.awt.headless>
              <glass.platform>Monocle</glass.platform>
              <monocle.platform>Headless</monocle.platform>
              <prism.order>sw</prism.order>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        </plugins>
    </build>
</project>
